@@ -18,6 +18,7 @@ type t =
 	| Pure
 	| Impure
 	| MaybePure
+	| InferredPure
 	| ExpectPure of pos
 
 let get_purity_from_meta meta =
@@ -25,7 +26,7 @@ let get_purity_from_meta meta =
 		begin match Meta.get Meta.Pure meta with
 		| (_,[EConst(Ident s),p],_) ->
 			begin match s with
-			| "true" -> Pure
+			| "true" | "inferredPure" -> Pure
 			| "false" -> Impure
 			| "expect" -> ExpectPure p
 			| _ -> error ("Unsupported purity value " ^ s ^ ", expected true or false") p
@@ -39,7 +40,7 @@ let get_purity_from_meta meta =
 		MaybePure
 
 let get_purity c cf = match get_purity_from_meta cf.cf_meta with
-	| Pure -> Pure
+	| Pure | InferredPure -> Pure
 	| Impure -> Impure
 	| ExpectPure p -> ExpectPure p
 	| _ -> get_purity_from_meta c.cl_meta
@@ -63,5 +64,6 @@ let is_explicitly_impure fa = match fa with
 let to_string = function
 	| Pure -> "pure"
 	| Impure -> "impure"
+	| InferredPure -> "inferredPure"
 	| MaybePure -> "maybe"
 	| ExpectPure _ -> "expect"
