@@ -1,0 +1,5 @@
+abstract B(Int) {
+	public inline function new(v) {
+		this = v;
+	}
+}
